feat(letter): fix alignment, add rich text editor, and optimize print layout

--- a/studio/src/templates/letter.html
+++ b/studio/src/templates/letter.html
@@ -39,7 +39,7 @@
         <section class="letter-content">
             <p style="margin-bottom: 25px;"><strong>Subject: {{subject}}</strong></p>
             <p style="margin-bottom: 20px;">{{salutation}},</p>
-            <div style="white-space: pre-line; line-height: 1.6;">
+            <div class="letter-body">
                 {{body}}
             </div>
         </section>
